@@ -13,6 +13,8 @@ import javafx.application.Platform;
 import jakarta.ws.rs.core.Response;
 
 import commons.Tag;
+import javafx.beans.property.SimpleObjectProperty;
+import javafx.beans.property.SimpleStringProperty;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.scene.control.*;
@@ -21,9 +23,7 @@ import javafx.scene.effect.DropShadow;
 import javafx.scene.effect.InnerShadow;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.input.KeyCode;
-import javafx.scene.input.MouseButton;
-import javafx.scene.input.MouseEvent;
+import javafx.scene.input.*;
 import javafx.scene.layout.AnchorPane;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.Pane;
@@ -34,18 +34,13 @@ import javafx.collections.ObservableList;
 import javafx.stage.Modality;
 import javafx.stage.Popup;
 
-
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.sql.Date;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Properties;
+import java.text.SimpleDateFormat;
+import java.util.*;
 import java.util.prefs.BackingStoreException;
 import java.util.prefs.Preferences;
 
@@ -56,7 +51,7 @@ import static client.Main.switchLocale;
  */
 public class OverviewCtrl implements Main.UpdatableUI {
 
-    private static final String SELECTED_IMAGE_KEY =  "selectedImage";
+    private static final String SELECTED_IMAGE_KEY = "selectedImage";
     private final ServerUtils serverUtils;
     private final MainCtrl mainCtrl;
     @FXML
@@ -95,9 +90,6 @@ public class OverviewCtrl implements Main.UpdatableUI {
     @FXML
     private ChoiceBox<Participant> participantBox;
     @FXML
-    private ListView<Expense> expenseList;
-    private ObservableList<Expense> original;
-    @FXML
     private FlowPane participantsField;
     @FXML
     private Button statistics;
@@ -105,17 +97,32 @@ public class OverviewCtrl implements Main.UpdatableUI {
     @FXML
     private Pane options;
     @FXML
-    public AnchorPane ap;
-    private boolean admin;
-    private Preferences prefs = Preferences.userNodeForPackage(OverviewCtrl.class);;
-    private final UserConfig userConfig = new UserConfig();
-    private Map<Long,List<Expense>> previousExpenses;
-    @FXML
     private Button cancel;
     @FXML
     private Button delete;
     @FXML
     private Button edit;
+    @FXML
+    public Text inviteCode;
+    private ObservableList<Expense> original;
+    @FXML
+    private TableView<Expense> expenseTable;
+    @FXML
+    private TableColumn<Expense, String> dateColumn;
+    @FXML
+    private TableColumn<Expense, String> whoPaidColumn;
+    @FXML
+    private TableColumn<Expense, String> howMuchColumn;
+    @FXML
+    private TableColumn<Expense, String> inclParticipantsColumn;
+    @FXML
+    private TableColumn<Expense, Tag> tagsColumn;
+    @FXML
+    public AnchorPane ap;
+    private boolean admin;
+    private Preferences prefs = Preferences.userNodeForPackage(OverviewCtrl.class);;
+    private final UserConfig userConfig = new UserConfig();
+    private Map<Long, List<Expense>> previousExpenses;
 
     /**
      * Constructs an OverviewCtrl object.
@@ -135,39 +142,54 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * Initializes the controller.
      */
     public void initialize() {
-        admin=false;
+        expenseTable = new TableView<>();
+
+        admin = false;
         userConfig.reloadLanguageFile();
         String lp = userConfig.getLanguageConfig();
         if (lp.equals("en") || lp.equals("nl") || lp.equals("es")) {
             Image image = new Image(prefs.get(SELECTED_IMAGE_KEY, null));
-            prefs.put(SELECTED_IMAGE_KEY, "/client/misc/"+lp+"_flag.png");
+            prefs.put(SELECTED_IMAGE_KEY, "/client/misc/" + lp + "_flag.png");
             menuButtonView.setImage(image);
         }
+
+        inviteCode.setOnMouseEntered(colorSwitch -> {
+            inviteCode.setStyle("-fx-text-fill: #de6161;");
+        });
+        inviteCode.setOnMouseExited(colorSwitch -> {
+            inviteCode.setStyle("-fx-text-fill: black;");
+        });
+        inviteCode.setOnMouseClicked(codeCopyEvent -> {
+            Clipboard clipboard = Clipboard.getSystemClipboard();
+            ClipboardContent content = new ClipboardContent();
+            content.putString(event.getInviteCode());
+            clipboard.setContent(content);
+        });
 
         ap.setOnKeyPressed(event -> {
             if (event.getCode() == KeyCode.ESCAPE) {
                 userConfig.reloadLanguageFile();
                 backToStartScreen();
             }
-            if(event.isControlDown() && event.getCode() == KeyCode.S){
+            if (event.isControlDown() && event.getCode() == KeyCode.S) {
                 showStatistics();
             }
-            if(event.isControlDown() && event.getCode() == KeyCode.L){
+            if (event.isControlDown() && event.getCode() == KeyCode.L) {
                 langButton.fire();
             }
-            if(event.isControlDown() && event.getCode() == KeyCode.A){
+            if (event.isControlDown() && event.getCode() == KeyCode.A) {
                 toAddExpense();
             }
-            if(event.isControlDown() && event.getCode() == KeyCode.D){
+            if (event.isControlDown() && event.getCode() == KeyCode.D) {
                 mainCtrl.showOpenDebts(this.event);
             }
         });
-        expenseList = new ListView<>();
         webSocket.connect("ws://localhost:8080/websocket");
-        webSocket.addEventListener((event)->{
-            if(this.event==null||!this.event.getId().equals(event.getId())) return;
-            else{
-                Platform.runLater(()->{
+        webSocket.addEventListener((event) -> {
+            if (this.event == null || !this.event.getId().equals(event.getId()))
+                return;
+            else {
+                Platform.runLater(() -> {
                     refresh(event);
                 });
             }
@@ -176,18 +198,108 @@ public class OverviewCtrl implements Main.UpdatableUI {
         setParticipantBoxPopup();
         setInstructions();
         buttonSetup();
+        refreshExpenseTable();
     }
 
+    /**
+     * Refreshes the expenseTable to show the expenses.
+     */
+    private void refreshExpenseTable() {
+        expenseTable.getItems().clear();
+        expenseTable.getColumns().clear();
+
+        dateColumn = new TableColumn<>(Main.getLocalizedString("date"));
+        dateColumn.setCellValueFactory(e -> new SimpleStringProperty(formattedDate(e.getValue().getDate())));
+
+        whoPaidColumn = new TableColumn<>(Main.getLocalizedString("whoPaid"));
+        whoPaidColumn.setCellValueFactory(e -> new SimpleStringProperty(
+                 Currency.getInstance(userConfig.getCurrencyConfig()).getSymbol()
+                         + " " + Double.toString(e.getValue().getAmount())));
+
+        howMuchColumn = new TableColumn<>(Main.getLocalizedString("howMuch"));
+        howMuchColumn.setCellValueFactory(e -> new SimpleStringProperty(Double.toString(e.getValue().getAmount())));
+
+        inclParticipantsColumn = new TableColumn<>(Main.getLocalizedString("involvedParticipants"));
+        inclParticipantsColumn.setCellValueFactory(e ->  new SimpleStringProperty(
+                setParticipantsString(e.getValue().getInvolvedParticipants())));
+
+        tagsColumn = new TableColumn<>(Main.getLocalizedString("tag"));
+        tagsColumn.setCellValueFactory(e -> new SimpleObjectProperty<>(e.getValue().getTag()));
+        tagsColumn.setCellFactory(column -> new TableCell<>() {
+            {
+                itemProperty().addListener((obs, oldTag, newTag) -> {
+                    if (newTag == null) {
+                        setText(null);
+                        setStyle(null);
+                    } else {
+                        setText(newTag.getName());
+                        setCellColor(this, newTag);
+                    }
+                });
+            }
+        });
+
+        expenseTable.getColumns().addAll(tagsColumn, dateColumn, whoPaidColumn, howMuchColumn, inclParticipantsColumn);
+    }
+
+    /**
+     * Formats the date and returns a string version of it.
+     *
+     * @param date The date to be formatted.
+     * @return the string of the formatted date.
+     */
+    private String formattedDate(java.util.Date date) {
+        Date sqldate = new Date(date.getTime());
+        SimpleDateFormat dateFormat = new SimpleDateFormat("MMM d, yyyy");
+        return dateFormat.format(sqldate);
+    }
+
+    /**
+     * Creates and returns a string of the involvedParticipants list.
+     *
+     * @return a string of the involvedParticipants list.
+     */
+    private String setParticipantsString(List<Participant> involvedParticipants) {
+        StringBuilder participantString = new StringBuilder();
+        for (int i = 0; i < involvedParticipants.size(); i++) {
+            participantString.append(involvedParticipants.get(i).getName());
+            if (i < involvedParticipants.size() - 1) {
+                participantString.append(", ");
+            }
+        }
+        return participantString.toString();
+    }
+
+    /**
+     * Sets the color of a cell to the color of the tag added.
+     *
+     * @param cell The cell of which the color should be set.
+     * @param tag The tag of which we will set the cell color to.
+     */
+    private void setCellColor(TableCell<Expense, Tag> cell, Tag tag) {
+        String colorStyle = String.format("-fx-background-color: rgba(%d, %d, %d, 1);", tag.getRed(),
+                tag.getGreen(), tag.getBlue());
+        cell.setStyle(colorStyle);
+
+        double brightness = (tag.getRed() * 0.299 + tag.getGreen() * 0.587
+                + tag.getBlue() * 0.114) / 255;
+        String textColor = brightness < 0.5 ? "white" : "black";
+        cell.setTextFill(Color.web(textColor));
+    }
+
+    /**
+     * Creates the participant pop-up and sets the styling for it.
+     */
     private void setParticipantsPopup() {
         Label pop = new Label(" Double right click for delete, \n and double left click for edit ");
         pop.setStyle(" -fx-background-color: white; -fx-border-color: black;");
-        pop.setMinSize(100,50);
+        pop.setMinSize(100, 50);
         Popup popup = new Popup();
         popup.getContent().add(pop);
-        participants.setOnMouseEntered(event ->{
-            popup.show(mainCtrl.getPrimaryStage(),event.getScreenX(), event.getScreenY()+5);
+        participants.setOnMouseEntered(event -> {
+            popup.show(mainCtrl.getPrimaryStage(), event.getScreenX(), event.getScreenY() + 5);
         });
-        participants.setOnMouseExited(event ->{
+        participants.setOnMouseExited(event -> {
             popup.hide();
         });
     }
@@ -281,28 +393,10 @@ public class OverviewCtrl implements Main.UpdatableUI {
                         var alert = new Alert(Alert.AlertType.CONFIRMATION);
                         alert.initModality(Modality.APPLICATION_MODAL);
                         alert.setContentText("Are you sure you want to delete this participant?");
-                        alert.showAndWait().ifPresent((response)->{
-                            if(response == ButtonType.OK){
-                                event.removeParticipant(contact);
-                                serverUtils.updateEvent(event);
-                                List<Expense> toDelete = new ArrayList<>();
-                                for(Expense expense : event.getExpenses()){
-                                    if(expense.getPaidBy().equals(contact)) toDelete.add(expense);
-                                    else if(expense.getInvolvedParticipants().contains(contact)){
-                                        if(expense.getInvolvedParticipants().size()==1) toDelete.add(expense);
-                                        else{
-                                            expense.getInvolvedParticipants().remove(contact);
-                                            serverUtils.updateExpense(event.getId(), expense);
-                                        }
-                                    }
-                                }
-                                for(Expense expense1: toDelete){
-                                    serverUtils.deleteExpense(event.getId(), expense1);
-                                }
-                                serverUtils.deleteParticipant(contact);
-                                this.event.setParticipants(serverUtils.getEvent(event.getId()).getParticipants());
-                                this.event = serverUtils.updateEvent(this.event);
-                                participantsDisplay();
+
+                        alert.showAndWait().ifPresent((response) -> {
+                            if (response == ButtonType.OK) {
+                                removeParticipantFromEvent(contact);
                             }
                         });
 
@@ -312,6 +406,39 @@ public class OverviewCtrl implements Main.UpdatableUI {
             });
             participantsField.getChildren().add(label);
         }
+    }
+
+    /**
+     * Removes a participant from the event. It also removed the participant from
+     * any related expenses or removed
+     * the expense all together if they are the only involved participant.
+     * Then it updates the participant display.
+     *
+     * @param contact the participant to be removed from the event and expenses
+     */
+    private void removeParticipantFromEvent(Participant contact) {
+        event.removeParticipant(contact);
+        serverUtils.updateEvent(event);
+        List<Expense> toDelete = new ArrayList<>();
+        for (Expense expense : event.getExpenses()) {
+            if (expense.getPaidBy().equals(contact))
+                toDelete.add(expense);
+            else if (expense.getInvolvedParticipants().contains(contact)) {
+                if (expense.getInvolvedParticipants().size() == 1)
+                    toDelete.add(expense);
+                else {
+                    expense.getInvolvedParticipants().remove(contact);
+                    serverUtils.updateExpense(event.getId(), expense);
+                }
+            }
+        }
+        for (Expense expense1 : toDelete) {
+            serverUtils.deleteExpense(event.getId(), expense1);
+        }
+        serverUtils.deleteParticipant(contact);
+        this.event.setParticipants(serverUtils.getEvent(event.getId()).getParticipants());
+        this.event = serverUtils.updateEvent(this.event);
+        participantsDisplay();
     }
 
     /**
@@ -333,8 +460,7 @@ public class OverviewCtrl implements Main.UpdatableUI {
         if (!participantExists) {
             Participant newPart = serverUtils.addParticipant(participant);
             this.event.getParticipants().add(newPart);
-        }
-        else{
+        } else {
             serverUtils.updateParticipant(participant);
             this.event.getParticipants().set(index, participant);
         }
@@ -361,51 +487,51 @@ public class OverviewCtrl implements Main.UpdatableUI {
     }
 
     /**
-     * Switches the language of the app to english
-     *
-     * @param actionEvent picking english in language menu button
+     * Switches the language of the app to English
      */
-    public void switchToEnglish(ActionEvent actionEvent) throws BackingStoreException {
+    public void switchToEnglish() throws BackingStoreException {
         userConfig.setLanguageConfig("en");
         userConfig.reloadLanguageFile();
         switchLocale("messages", "en");
-        Image image = new Image(Objects.requireNonNull(getClass().getResource("/client/misc/en_flag.png")).toExternalForm());
+        Image image = new Image(
+                Objects.requireNonNull(getClass().getResource("/client/misc/en_flag.png")).toExternalForm());
         menuButtonView.setImage(image);
+        refresh(event);
     }
 
     /**
-     * Switches the language of the app to dutch
-     *
-     * @param actionEvent picking dutch in language menu button
+     * Switches the language of the app to Dutch.
      */
-    public void switchToDutch(ActionEvent actionEvent) throws BackingStoreException {
+    public void switchToDutch() throws BackingStoreException {
         userConfig.setLanguageConfig("nl");
         userConfig.reloadLanguageFile();
         switchLocale("messages", "nl");
-        Image image = new Image(Objects.requireNonNull(getClass().getResource("/client/misc/nl_flag.png")).toExternalForm());
+        Image image = new Image(
+                Objects.requireNonNull(getClass().getResource("/client/misc/nl_flag.png")).toExternalForm());
         menuButtonView.setImage(image);
+        refresh(event);
     }
 
     /**
-     * Switches the language of the app to spanish
-     *
-     * @param actionEvent picking spanish in language menu button
+     * Switches the language of the app to Spanish
      */
-    public void switchToSpanish(ActionEvent actionEvent) throws BackingStoreException {
+    public void switchToSpanish() throws BackingStoreException {
         userConfig.setLanguageConfig("es");
         userConfig.reloadLanguageFile();
-        switchLocale("messages","es");
-        Image image = new Image(Objects.requireNonNull(getClass().getResource("/client/misc/es_flag.png")).toExternalForm());
+        switchLocale("messages", "es");
+        Image image = new Image(
+                Objects.requireNonNull(getClass().getResource("/client/misc/es_flag.png")).toExternalForm());
         menuButtonView.setImage(image);
+        refresh(event);
     }
 
     /**
-     *
-     * @param actionEvent
-    */
-    public void addLang(ActionEvent actionEvent) throws BackingStoreException {
+     * Creates a new messages.properties file and downloads it to a users Downloads directory.
+     */
+    public void addLang() throws BackingStoreException {
         Properties newLang = new Properties();
-        try (BufferedReader reader = new BufferedReader(new FileReader("src/main/resources/client/misc/langTemplate.txt"))) {
+        try (BufferedReader reader = new BufferedReader(
+                new FileReader("src/main/resources/client/misc/langTemplate.txt"))) {
             newLang.load(reader);
         } catch (IOException e) {
             e.printStackTrace();
@@ -413,12 +539,10 @@ public class OverviewCtrl implements Main.UpdatableUI {
 
         String newLangPath;
         try (OutputStream output = new FileOutputStream("src/main/resources/client/misc/messages.properties")) {
-            newLang.store(output, "Add the name of your new language to the first line of this file as a comment\n"+
+            newLang.store(output, "Add the name of your new language to the first line of this file as a comment\n" +
                     "Send the final translation version to ooppteam58@gmail.com");
 
             newLangPath = "client/src/main/resources/client/misc/messages.properties";
-        } catch (FileNotFoundException e) {
-            throw new RuntimeException(e);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -435,18 +559,17 @@ public class OverviewCtrl implements Main.UpdatableUI {
 
     /**
      * Directs user back to the startScreen. Here they can join other events if they
-     * want to
+     * want to.
      */
     public void backToStartScreen() {
-        if(admin){
+        if (admin) {
             mainCtrl.showAdminEventOverview();
         }
 
-        else{
+        else {
             userConfig.reloadLanguageFile();
             mainCtrl.showStartScreen();
         }
-
     }
 
     /**
@@ -466,42 +589,18 @@ public class OverviewCtrl implements Main.UpdatableUI {
     }
 
     /**
-     * Fills the expense list with the expenses of the event
-     * @return the list of expenses
+     * Converts the currency of all the expenses.
+     *
+     * @param a The list with expenses to be converted.
+     * @return a new list of expenses with the converted currencies.
      */
-    public ListView<Expense> expenseFiller() {
-        expenseList.setCellFactory(listView -> new ListCell<Expense>() {
-            @Override
-            protected void updateItem(Expense expense, boolean empty) {
-                super.updateItem(expense, empty);
-                if (empty || expense == null) {
-                    setText(null);
-                    setStyle(null);
-                } else {
-                    setText(expense.toString());
-
-                    Tag tag = expense.getTag();
-                    if (tag != null) {
-                        String colorStyle = String.format("-fx-background-color: rgba(%d, %d, %d, 1);", tag.getRed(), tag.getGreen(), tag.getBlue());
-                        setStyle(colorStyle);
-
-                        double brightness = (tag.getRed() * 0.299 + tag.getGreen() * 0.587 + tag.getBlue() * 0.114) / 255;
-
-                        String textColor = brightness < 0.5 ? "white" : "black";
-                        setTextFill(Color.web(textColor));
-                    }
-                }
-            }
-        });
-        return expenseList;
-    }
-    public List<Expense> convertCurrency(List<Expense> a){
+    public List<Expense> convertCurrency(List<Expense> a) {
         String c = userConfig.getCurrencyConfig();
-        for(Expense b:a){
-            if(!b.getCurrency().equals(c)){
-                int amn =(int)(serverUtils.convertCurrency(b.getAmount(),b.getCurrency(),
-                        c, new Date(b.getDate().getTime()).toLocalDate())*100);
-                b.setAmount((double)amn/100);
+        for (Expense b : a) {
+            if (!b.getCurrency().equals(c)) {
+                int amn = (int) (serverUtils.convertCurrency(b.getAmount(), b.getCurrency(),
+                        c, new Date(b.getDate().getTime()).toLocalDate()) * 100);
+                b.setAmount((double) amn / 100);
                 b.setCurrency(c);
             }
         }
@@ -510,10 +609,11 @@ public class OverviewCtrl implements Main.UpdatableUI {
 
     /**
      * Changes the preferred currency of the event to Euro (EUR).
-     * Updates the event's preferred currency on the server and refreshes the displayed expenses accordingly.
+     * Updates the event's preferred currency on the server and refreshes the
+     * displayed expenses accordingly.
      */
     @FXML
-    public void changeCurrencyEUR(){
+    public void changeCurrencyEUR() {
         userConfig.setCurrencyConfig("EUR");
         refresh(this.event);
         showAllExpenses();
@@ -521,10 +621,11 @@ public class OverviewCtrl implements Main.UpdatableUI {
 
     /**
      * Changes the preferred currency of the event to US Dollar (USD).
-     * Updates the event's preferred currency on the server and refreshes the displayed expenses accordingly.
+     * Updates the event's preferred currency on the server and refreshes the
+     * displayed expenses accordingly.
      */
     @FXML
-    public void changeCurrencyUSD(){
+    public void changeCurrencyUSD() {
         userConfig.setCurrencyConfig("USD");
         refresh(this.event);
         showAllExpenses();
@@ -532,10 +633,11 @@ public class OverviewCtrl implements Main.UpdatableUI {
 
     /**
      * Changes the preferred currency of the event to Swiss Franc (CHF).
-     * Updates the event's preferred currency on the server and refreshes the displayed expenses accordingly.
+     * Updates the event's preferred currency on the server and refreshes the
+     * displayed expenses accordingly.
      */
     @FXML
-    public void changeCurrencyCHF(){
+    public void changeCurrencyCHF() {
         userConfig.setCurrencyConfig("CHF");
         refresh(this.event);
         showAllExpenses();
@@ -545,21 +647,19 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * Shows all expenses of the event
      */
     public void showAllExpenses() {
-
-        expenseList = new ListView<>();
+        expenseTable = new TableView<>();
+        refreshExpenseTable();
         original = FXCollections.observableArrayList();
 
-        expenseList = expenseFiller();
-
-        for (Expense e : event.getExpenses()){
-            if (e.getTitle().equalsIgnoreCase("debt repayment")){
+        for (Expense e : event.getExpenses()) {
+            if (e.getTitle().equalsIgnoreCase("debt repayment")) {
                 continue;
             }
             original.add(e);
         }
         original = (ObservableList<Expense>) convertCurrency(original);
-        expenseList.setItems(original);
-        all.setContent(expenseList);
+        expenseTable.setItems(original);
+        all.setContent(expenseTable);
         selectExpense();
     }
 
@@ -568,10 +668,9 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * selected participant in the box
      */
     public void showFromSelected() {
-        expenseList =  new ListView<>();
+        expenseTable = new TableView<>();
+        refreshExpenseTable();
         original = FXCollections.observableArrayList();
-
-        expenseList = expenseFiller();
 
         for (Expense e : event.getExpenses()) {
             if (e.getTitle().equalsIgnoreCase("debt repayment")) {
@@ -582,8 +681,8 @@ public class OverviewCtrl implements Main.UpdatableUI {
             }
         }
         original = (ObservableList<Expense>) convertCurrency(original);
-        expenseList.setItems(original);
-        fromSelected.setContent(expenseList);
+        expenseTable.setItems(original);
+        fromSelected.setContent(expenseTable);
         selectExpense();
     }
 
@@ -592,10 +691,9 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * then selected participant in the box
      */
     public void showIncludingSelected() {
-        expenseList = new ListView<>();
+        expenseTable = new TableView<>();
+        refreshExpenseTable();
         original = FXCollections.observableArrayList();
-
-        expenseList = expenseFiller();
 
         for (Expense e : event.getExpenses()) {
             if (e.getTitle().equalsIgnoreCase("debt repayment")) {
@@ -607,11 +705,9 @@ public class OverviewCtrl implements Main.UpdatableUI {
             }
         }
         original = (ObservableList<Expense>) convertCurrency(original);
-        expenseList.setItems(original);
-
-        inclSelected.setContent(expenseList);
+        expenseTable.setItems(original);
+        inclSelected.setContent(expenseTable);
         selectExpense();
-
     }
 
     /**
@@ -620,18 +716,19 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * @param event which overview to load
      */
     public void refresh(Event event) {
-
-        if(this.event==null||!this.event.getId().equals(event.getId())) previousExpenses = new HashMap<>();
+        if (this.event == null || !this.event.getId().equals(event.getId()))
+            previousExpenses = new HashMap<>();
 
         userConfig.reloadLanguageFile();
         String lp = userConfig.getLanguageConfig();
         if (lp.equals("en") || lp.equals("nl") || lp.equals("es")) {
             Image image = new Image(prefs.get(SELECTED_IMAGE_KEY, null));
-            prefs.put(SELECTED_IMAGE_KEY, "/client/misc/"+lp+"_flag.png");
+            prefs.put(SELECTED_IMAGE_KEY, "/client/misc/" + lp + "_flag.png");
             menuButtonView.setImage(image);
         }
 
         this.event = serverUtils.getEvent(event.getId());
+        inviteCode.setText(event.getInviteCode());
         options.setVisible(false);
         block.setVisible(false);
         titlePrepare();
@@ -642,6 +739,7 @@ public class OverviewCtrl implements Main.UpdatableUI {
 
     /**
      * switches to the Open Debt scene
+     * 
      * @param actionEvent event that calls the method, click on the button
      */
     public void settleDebts(ActionEvent actionEvent) {
@@ -652,10 +750,10 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * sets up the choice box "participant box", clears all options,
      * then adds all current participant of the event
      */
-    public void setUpParticipantBox(){
+    public void setUpParticipantBox() {
         participantBox.getItems().removeAll(participantBox.getItems());
-        for(Participant p : this.event.getParticipants()){
-                participantBox.getItems().add(p);
+        for (Participant p : this.event.getParticipants()) {
+            participantBox.getItems().add(p);
         }
     }
 
@@ -670,7 +768,7 @@ public class OverviewCtrl implements Main.UpdatableUI {
      * Calls methods showFromSelected & showIncludingSelected
      * when a participant is picked in the choice box
      */
-    public void selected(){
+    public void selected() {
         showFromSelected();
         showIncludingSelected();
     }
@@ -678,23 +776,20 @@ public class OverviewCtrl implements Main.UpdatableUI {
     /**
      * When an expense is clicked on / selected an options pop-up pops-up
      */
-    public void selectExpense(){
-
-        this.expenseList.getSelectionModel().setSelectionMode(SelectionMode.SINGLE);
-        this.expenseList.setOnMouseClicked((MouseEvent event) -> {
-
-            if(event.getClickCount() == 2){
+    public void selectExpense() {
+        this.expenseTable.getSelectionModel().setSelectionMode(SelectionMode.SINGLE);
+        this.expenseTable.setOnMouseClicked((MouseEvent event) -> {
+            if (event.getClickCount() == 2) {
                 options.setVisible(true);
                 block.setVisible(true);
             }
-
         });
     }
 
     /**
      * Closes the options popup without any changes to the expense
      */
-    public void cancel(){
+    public void cancel() {
         options.setVisible(false);
         block.setVisible(false);
     }
@@ -702,21 +797,18 @@ public class OverviewCtrl implements Main.UpdatableUI {
     /**
      * Deletes the selected expense
      */
-    public void delete(){
-        try{
-            Response response = serverUtils.deleteExpense(this.event.getId(), expenseList.getSelectionModel().getSelectedItem());
-            if(response.getStatus() == Response.Status.OK.getStatusCode()){
-                System.out.println("OK! good job " + response.getStatus() );
-                deletePrevExp(expenseList.getSelectionModel().getSelectedItem());
-            }
-            else{
+    public void delete() {
+        try {
+            Response response = serverUtils.deleteExpense(this.event.getId(),
+                    expenseTable.getSelectionModel().getSelectedItem());
+            if (response.getStatus() == Response.Status.OK.getStatusCode()) {
+                System.out.println("OK! good job " + response.getStatus());
+                deletePrevExp(expenseTable.getSelectionModel().getSelectedItem());
+            } else {
                 System.out.println("Status code: " + response.getStatus());
             }
-
-//            event.removeExpense(expenseList.getSelectionModel().getSelectedItem());
             this.event = serverUtils.getEvent(this.event.getId());
-        }
-        finally {
+        } finally {
             options.setVisible(false);
             block.setVisible(false);
             mainCtrl.showEventOverview(event);
@@ -724,77 +816,87 @@ public class OverviewCtrl implements Main.UpdatableUI {
     }
 
     /**
-     * Shows add/edit expense overview with the selected expense so the user can edit it
+     * Shows add/edit expense overview with the selected expense so the user can
+     * edit it
      */
-    public void edit(){
-        Expense toEdit = expenseList.getSelectionModel().getSelectedItem();
-
-        if(toEdit == null) {
+    public void edit() {
+        Expense toEdit = expenseTable.getSelectionModel().getSelectedItem();
+        if (toEdit == null) {
             System.out.println("nothing selected");
-        }
-        else {
+        } else {
             mainCtrl.showExpense(this.event, toEdit);
         }
     }
 
     /**
-     * marks that an admin is accessing the event overview
-     * @param b
+     * marks if an admin is accessing the event overview (true), or not (false)
+     * 
+     * @param b the boolean that describes whether the admin is accessing an event overview.
      */
     public void setAdmin(boolean b) {
-        this.admin=b;
+        this.admin = b;
     }
+
     /**
      * deletes the expense from the cached ones
+     * 
      * @param expense the expense to be deleted from the cache
      */
-    public void deletePrevExp(Expense expense){
-        if(previousExpenses.get(expense.getId())!=null){
+    public void deletePrevExp(Expense expense) {
+        if (previousExpenses.get(expense.getId()) != null) {
             previousExpenses.get(expense.getId()).removeLast();
-            if(previousExpenses.get(expense.getId()).size()==0) previousExpenses.remove(expense.getId());
+            if (previousExpenses.get(expense.getId()).isEmpty())
+                previousExpenses.remove(expense.getId());
         }
     }
+
     /**
      * add an expense to the cache
+     * 
      * @param expense the expense to be added
      */
-    public void addPrevExp(Expense expense){
-        if(previousExpenses.get(expense.getId())==null){
-            previousExpenses.put(expense.getId(),new ArrayList<>());
+    public void addPrevExp(Expense expense) {
+        if (previousExpenses.get(expense.getId()) == null) {
+            previousExpenses.put(expense.getId(), new ArrayList<>());
             previousExpenses.get(expense.getId()).add(expense);
-        }
-        else previousExpenses.get(expense.getId()).add(expense);
+        } else
+            previousExpenses.get(expense.getId()).add(expense);
     }
+
     /**
      * Returning the previous version of the expense stored in the cache
+     * 
      * @param id the id of the expense
      * @return the previous version of the expense
      */
-    public Expense getPrevExp(Long id){
-        if(previousExpenses.get(id)==null) return null;
-        return previousExpenses.get(id).get(previousExpenses.get(id).size()-1);
+    public Expense getPrevExp(Long id) {
+        if (previousExpenses.get(id) == null)
+            return null;
+        return previousExpenses.get(id).getLast();
     }
 
     /**
      * Get the currency
+     * 
      * @return the currency
      */
     public String getCurrency() {
         return userConfig.getCurrencyConfig();
     }
+
     /**
      * Sets the popup for participant box explanation.
      */
-    public void setParticipantBoxPopup(){
+    public void setParticipantBoxPopup() {
         Label pop = new Label(" Pick the participant ");
-        pop.setStyle("-fx-background-color: white; -fx-border-color: black"); //lightPink
+        pop.setStyle("-fx-background-color: white; -fx-border-color: black"); // lightPink
         pop.setMinSize(50, 25);
         Popup popup = new Popup();
         popup.getContent().add(pop);
-        participantBox.setOnMouseEntered( mouseEvent -> {
+        participantBox.setOnMouseEntered(mouseEvent -> {
             popup.show(mainCtrl.getPrimaryStage(), mouseEvent.getScreenX(), mouseEvent.getScreenY() + 5);
         });
-        participantBox.setOnMouseExited( mouseEvent -> {
+        participantBox.setOnMouseExited(mouseEvent -> {
             popup.hide();
         });
     }
@@ -802,7 +904,7 @@ public class OverviewCtrl implements Main.UpdatableUI {
     /**
      * Sets the instruction popups for shortcuts
      */
-    public void setInstructions(){
+    public void setInstructions() {
         mainCtrl.instructionsPopup(new Label(" press ESC to go to start screen "), this.home);
         mainCtrl.instructionsPopup(new Label(" press CTRL + S to go \n to the statistics page "), this.statistics);
         mainCtrl.instructionsPopup(new Label(" press CTRL + A to \n go to add expense "), this.addExpense);
@@ -810,11 +912,10 @@ public class OverviewCtrl implements Main.UpdatableUI {
         mainCtrl.instructionsPopup(new Label(" press CTRL + L to \n open language menu "), this.langButton);
     }
 
-
     /**
      * Sets the focus and hover over look for the elements on the scene.
      */
-    public void buttonSetup(){
+    public void buttonSetup() {
         mainCtrl.buttonFocus(this.home);
         mainCtrl.buttonFocus(this.settleDebts);
         mainCtrl.buttonFocus(this.statistics);
@@ -824,22 +925,20 @@ public class OverviewCtrl implements Main.UpdatableUI {
         mainCtrl.menuButtonFocus(this.langButton);
         mainCtrl.menuButtonFocus(this.currencyButton);
 
-        this.participantImage.focusedProperty().addListener( (obs, old, newV) -> {
-            if(newV){
+        this.participantImage.focusedProperty().addListener((obs, old, newV) -> {
+            if (newV) {
                 Color b = Color.rgb(0, 150, 230);
                 this.participantImage.setEffect(new DropShadow(10, b));
-            }
-            else {
+            } else {
                 this.participantImage.setEffect(null);
             }
         });
 
-        this.participantBox.focusedProperty().addListener( (obs, old, newV) -> {
-            if(newV){
+        this.participantBox.focusedProperty().addListener((obs, old, newV) -> {
+            if (newV) {
                 Color b = Color.rgb(0, 150, 230);
                 this.participantBox.setEffect(new DropShadow(10, b));
-            }
-            else {
+            } else {
                 this.participantBox.setEffect(null);
             }
         });
@@ -853,6 +952,5 @@ public class OverviewCtrl implements Main.UpdatableUI {
         });
 
     }
-
 
 }
